* BUG#7879 Fix behaviour of invoicing blocking which sometime caused duplicate invoices on a period
* BUG#7750 Fix non-synced billing period calculation
* OTH#0000 Make invoice line rounding behaviour easier to override
* OTH#0000 Fix contract invoice searcher following 4b8f11179
* FEA#7640 Block contract invoicing before a given date
* BUG#7535 Add missing authorizations on invoice taxes for the contract management group

Version 1.14 - 2017-11-09
* BUG#7467 Keep the premium precision when converting its frequency
* BUG#7492 Add contract on account move lines of taxes
* BUG#7395 Add check on manual invoice cancelling
* OTH#0000 Split the contract invoice creation batch query to ease override
* BUG#7337 Delete draft and approved payments related to an invoice which is cancelled
* BUG#7004 Block renewal contract if there are missing posted/paid invoices on the current term
* FEA#7170 Cleaning reconciliation code: More modularity and possibilities for overriding
* BUG#7188 Add a loader on contract.billing_information
* BUG#7145 Can't select write-off journal in reconciliation wizard when processing a write-off
* FEA#6950 Add invoice related functions in rule engine
* BUG#6709 Fix of the bulk invoice set number batch according to the merge 4.4
* BUG#6372 Add checkbox on payment journal to define whether the payment suspension applies
* BUG#5290 Generate invoices for never invoiced contracts
* BUG#6473 Use today's date to generate invoice reports* FEA#6493 New invoice set number batch with improved speed
* BUG#6491 Take draft and approved payable payments into account before invoicing in invoice against balance batch
* BUG#6454 Do not set a payment date on non-direct-debit invoices
* OTH#0000 Fix tests
* BUG#6436 Restore fee availability in future invoices

Version 1.12 - 2017-04-28
* FEA#0000 Add batches to invoice contracts against their balance
* FEA#0000 Take maturity date into account for automatic reconciliation order