@@ -1,3 +1,4 @@
+* BUG#7987 Suppression / Annulation des quittances suite à la déclinaison d'un devis
 * BUG#7879 Correction d'une anomalie où le blocage des quittancement pouvait causer la génération de plusieurs quittances sur la même période
 * BUG#7750 Correction du calcul des périodes de quittancements pour des périodicités annuelles non synchronisées
 * OTH#0000 Facilitation de la surcharge des règles d'arrondi des lignes de quittance
